--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
-    "bootstrap": "^4.5.0",
-    "keycloak-angular": "^8.1.0",
-    "keycloak-js": "^12.0.4",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "bootstrap": "^5.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
