--- a/package.json
+++ b/package.json
@@ -23,22 +23,29 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "@okta/okta-angular": "^3.2.2",
+    "@okta/okta-signin-widget": "^5.10.1",
+    "ajv-formats": "^2.1.1",
     "angular-bootstrap-md": "^11.1.0",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "lord-icon-element": "^2.1.0",
     "lottie-web": "^5.7.13",
+    "ngx-owl-carousel-o": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.10",
+    "@angular-devkit/build-angular": "~12.1.1",
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
+    "@oktadev/schematics": "^5.0.1",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.26",
+    "@types/react-router-dom": "^4.2.6",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -46,7 +53,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
