--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.11",
-    "@angular/common": "~11.2.11",
-    "@angular/compiler": "~11.2.11",
-    "@angular/core": "~11.2.11",
-    "@angular/forms": "~11.2.11",
-    "@angular/localize": "~11.2.11",
-    "@angular/platform-browser": "~11.2.11",
-    "@angular/platform-browser-dynamic": "~11.2.11",
-    "@angular/router": "~11.2.11",
+    "@angular/animations": "~12.0.3",
+    "@angular/common": "~12.0.3",
+    "@angular/compiler": "~12.0.3",
+    "@angular/core": "~12.0.3",
+    "@angular/forms": "~12.0.3",
+    "@angular/localize": "~12.2.7",
+    "@angular/platform-browser": "~12.0.3",
+    "@angular/platform-browser-dynamic": "~12.0.3",
+    "@angular/router": "~12.0.3",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -26,7 +27,6 @@
     "@okta/okta-angular": "^3.2.2",
     "@okta/okta-signin-widget": "^5.10.1",
     "ajv-formats": "^2.1.1",
-    "angular-bootstrap-md": "^11.1.0",
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
     "font-awesome": "^4.7.0",
@@ -35,28 +35,27 @@
     "lottie-web": "^5.7.13",
     "ngx-owl-carousel-o": "^6.0.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.1",
-    "@angular/cli": "~11.2.10",
-    "@angular/compiler-cli": "~11.2.11",
-    "@oktadev/schematics": "^5.0.1",
+    "@angular-devkit/build-angular": "~12.0.3",
+    "@angular/cli": "~12.0.3",
+    "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.26",
-    "@types/react-router-dom": "^4.2.6",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.7.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "typescript": "~4.2.3",
+    "@types/react-router-dom": "^4.2.6",
+    "codelyzer": "^6.0.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "tslint": "~6.1.0"
   }
 }
