--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -40,7 +41,9 @@
     "ngx-owl-carousel-o": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "typescript": "~4.2.3"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.3",
@@ -61,5 +64,10 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
+  },
+  "engines": {
+    "node": "14.17.1",
+    "npm": "6.14.13"
   }
+
 }
