--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ngcc",
-    "heroku-postbuild": "ng build --prod"
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
