--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-        "build": "ng build",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ngcc"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -38,11 +38,11 @@
     "lord-icon-element": "^2.1.0",
     "lottie-web": "^5.7.13",
     "ngx-owl-carousel-o": "^6.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.2.3"
-
+    "typescript": "~4.2.3",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.3",
@@ -68,5 +68,4 @@
     "node": "14.17.1",
     "npm": "6.14.13"
   }
-
 }
