--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "lord-icon-element": "^2.1.0",
